--- a/Surge/Module/VipCrack/VIP_Back.conf
+++ b/Surge/Module/VipCrack/VIP_Back.conf
@@ -40,3 +40,8 @@ hostname = notability.com, api.meiease.cn, server.yoyiapp.com, api.neuralprisma.
 # api.gotokeep.com, 
 # KEEP
 ^https?:\/\/api\.gotokeep\.com(\/athena\/v5\/people\/my|\/nuocha\/plans) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/keep.js
+
+# *.nebo.app, 
+# Myscript Nebo
+#（2021-03-21） by ddgksf2013
+^https?:\/\/.*\.nebo\.app\/api\/.*\/inapppurchase\/apple\/receipt url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/nebo.js
